--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,5 +2,13 @@
     This component is nesting multiple components below
 </h3>
 
+<button 
+    class="btn btn-primary"
+    [disabled]="!allowNewServer"
+    (click)="onServerCreate()">
+    Add Server
+</button>
+<p>{{ serverCreationStatus }}</p>
+
 <app-server></app-server>
 <app-server></app-server>
