--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,13 +2,46 @@
     This component is nesting multiple components below
 </h3>
 
+<label>
+    Server Name:
+</label>
+
+<!-- <input 
+    type="text" 
+    class="form-control" 
+    (input)="onUpdateServerName($event)" 
+/> -->
+
+<input 
+    type="text" 
+    class="form-control" 
+    [(ngModel)]="serverName"
+/>
+
+<!-- <p>
+    {{ serverName }}
+</p> -->
+
 <button 
     class="btn btn-primary"
     [disabled]="!allowNewServer"
     (click)="onServerCreate()">
     Add Server
 </button>
-<p>{{ serverCreationStatus }}</p>
+
+<p *ngIf="allowResetServerName">
+    {{ serverCreationStatus }}
+</p>
+
+<br>
+
+<button
+    class="btn btn-primary"
+    [disabled]="!allowResetServerName"
+    (click)="onResetServerName()"
+>
+    Reset Server Name
+</button>
 
 <app-server></app-server>
 <app-server></app-server>
